# AgentSkills

./: .gitignore
mcp/dws-mcp-server/: .env.example  README.md  fastmcp.json  pyproject.toml
mcp/dws-mcp-server/src/dws_mcp_server/: __init__.py  __main__.py  config.py  database.py  queries.py  server.py  service.py
skills/: pev2.md
skills/dws-sql-optimizer/: SKILL.md
skills/dws-sql-optimizer/agents/: openai.yaml
skills/dws-sql-optimizer/assets/: slow-sql-report-template.md
skills/dws-sql-optimizer/references/: dws-metadata-sql-snippets.md  intake-and-decision-checklist.md  mcp-autodiscovery-playbook.md  output-blueprint.md  sql-tuning-methodology.md
skills/huawei-dws-sql-optimizer/: SKILL.md
skills/huawei-dws-sql-optimizer/agents/: openai.yaml
skills/huawei-dws-sql-optimizer/assets/: slow-sql-report-template.md
skills/huawei-dws-sql-optimizer/references/: dws-diagnostics.md  dws-metadata-sql-snippets.md  intake-and-decision-checklist.md  mcp-autodiscovery-playbook.md  output-blueprint.md  sql-rewrite-anti-patterns.md  sql-tuning-case-patterns.md
skills/huawei-dws-sql-optimizer/scripts/: extract_dws_signals.py
skills/oracle-plus-join-rewriter/: SKILL.md
skills/oracle-plus-join-rewriter/agents/: openai.yaml
skills/oracle-plus-join-rewriter/references/: risk-checklist.md
